# dso-torch

./: .gitignore  README.md  pyproject.toml
src/dso/: core.py  cyfunc.pyx  library.py  logeval.py  memory.py  prior.py  program.py  run.py  state_manager.py  train.py  train_stats.py  utils.py
src/dso/config/: __init__.py  config_common.json  config_common.yaml  config_regression.json  config_regression.yaml  config_regression_gp.json  config_regression_gp.yaml
src/dso/policy/: policy.py  rnn_policy.py
src/dso/policy_optimizer/: pg_policy_optimizer.py  policy_optimizer.py
src/dso/task/: task.py
src/dso/task/regression/: dataset.py  polyfit.py  regression.py
src/dso/test/: test_core.py  test_prior.py
